--- a/index.css
+++ b/index.css
@@ -181,3 +181,9 @@ header ul li a {
     font-size: 16px;
     font-weight: 700;
 }
+
+footer {
+    color: var(--main-text);
+    text-align: center;
+    padding: 25px;
+}
