--- a/index.css
+++ b/index.css
@@ -101,6 +101,8 @@ header ul li a {
 
 .hero-img img {
     width: 525px;
+    height: 250px;
+    object-fit: cover;
 }
 
 .sign-up {
@@ -136,6 +138,8 @@ header ul li a {
 .random-img img {
     border-radius: 15px;
     width: 175px;
+    height: 175px;
+    object-fit: cover;
     border: 4px solid var(--action-blue);
 }
 
